fixed form alignment; added lame hover to create button

--- a/static/slim.css
+++ b/static/slim.css
@@ -162,6 +162,9 @@ dd { }
 
 /* Forms ------------------------------------------------------------ */
 
+form input[type='image'] { border: inset 2px #ccc; }
+form input[type='image']:hover { border: solid 2px #000; }
+
 fieldset { position: relative; border-top:1px solid #ccc; padding: 10px; margin-bottom:18px; }
 fieldset legend { font-weight:bold; font-size:16px; padding: 0 5px; }
 
@@ -183,7 +186,7 @@ form.block input[type="submit"] { display: block; }
 
 /* Tables ------------------------------------------------------------ */
 
-table { margin-bottom: 18px; width:100%; }
+table { margin-left: auto; margin-right: auto; margin-bottom: 18px; }
 th { font-weight: bold; }
 td { text-align: left; }
 tfoot { font-style: italic; }
